# surely-raytracing

./: '  .gitignore  Cargo.toml  Makefile  aa-image.ppm  image.ppm  random.ppm  random2.ppm  test.ppm
src/: color.rs  constant_medium.rs  estimate_halfway.rs  hittable.rs  interval.rs  main.rs  material.rs  object.rs  onb.rs  pdf.rs  perlin.rs  pi.rs  ray.rs  render.rs  rt_image.rs  sphere.rs  texture.rs  transform.rs  utils.rs  vec3.rs
