[package]
name = "raytracer"
version = "0.1.0"
edition = "2021"

[[bin]]
name="pi"
path="src/pi.rs"

[[bin]]
name="integrate"
path="src/estimate_halfway.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rayon = "1.8.1"
image = "0.24.9"
